[gd_scene load_steps=3 format=3 uid="uid://bk6kkbtfb7bm1"]

[ext_resource type="Script" path="res://scenes/ui/dialogs/RenameProjectDialog/RenameProjectDialog.gd" id="1_1gb7q"]
[ext_resource type="Theme" uid="uid://b7bms6qoy7yfq" path="res://assets/themes/MainTheme.tres" id="1_yx3e2"]

[node name="RenameDialog" type="Window"]
title = "Rename Project"
initial_position = 4
size = Vector2i(400, 200)
min_size = Vector2i(400, 200)
theme = ExtResource("1_yx3e2")
script = ExtResource("1_1gb7q")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Project Name:"

[node name="ProjectNameLineEdit" type="LineEdit" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Project Path:"

[node name="ProjectPathLineEdit" type="LineEdit" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
editable = false

[node name="Control4" type="Control" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CancelButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Cancel"

[node name="Control2" type="Control" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RenameButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Rename"

[node name="Control3" type="Control" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="text_submitted" from="PanelContainer/VBoxContainer/ProjectNameLineEdit" to="." method="_on_project_name_line_edit_text_submitted"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/RenameButton" to="." method="_on_rename_button_pressed"]
